<resources>
    <string name="app_name">LivePost</string>
    <string name="tab_name_home">Home</string>
    <string name="tab_name_new">New Story</string>
    <string name="tab_name_profile">Profile</string>
    <string name="txt_signup_header">Cover news &amp; events \n in real time</string>
    <string name="btn_login_twitter"> Log In with Twitter</string>
    <string name="btn_login_livepost"> Sign Up with LivePost</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="firebase_url">https://developer-livepost.firebaseio.com/</string>
    <string name="heroku_url">http://rest-livepost-dev.herokuapp.com/v1/signup</string>
    <string name="amazon_image_path">"http://sessionsandroid.s3.amazonaws.com/images/"</string>
    <string name="embed_url">https://livepost.co/?</string>
    <string name="delete_text">Are you sure you want to delete this story?</string>
    <string name="delete_confirm">Delete</string>
    <string name="delete_cancel">Cancel</string>
    <string name="btn_edit_profile">Edit</string>
    <string name="zero_created_header">Stop teasing us</string>
    <string name="zero_created_second">and start that post!</string>
    <string name="zero_created_bottom">Tip: Click on the image to cerate a new post.</string>
    <string name="zero_contributed_header">You still have not contributed \n to any posts.</string>
    <string name="zero_contributed_bottom">Tip: To contribute to a post you have to be invited by \n a post admin.</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="on_story_title">Your 1st Story</string>
    <string name="on_board_1">Hey welcome to LivePost! LivePost is all about covering news stories in real time and sharing them with the world.</string>
    <string name="on_board_2">We\'re going to do a quick walkthrough of how to create a story. Let\'s start off by clicking on “Your 1st Story” to give it a catchy title.</string>
    <string name="on_board_3">Awesome! Now click on “Pick a Category” up top to choose what your story is about.</string>
    <string name="on_board_4">Looking good! We added an image to your story, but you can change it later by long pressing it and adding your own.</string>
    <string name="on_board_5">Ok, so now all that\'s missing is your profile. Click on the profile picture to set it up.</string>
    <string name="on_board_6">Nice pic! Now hit “Publish” to choose if you want to publish your story on your blog or on the LivePost News website.</string>
    <string name="on_board_7">Great you\’re ready to start telling your story. Let\’s try sending a photo.</string>
    <string name="on_board_8">Click on the camera button down below to open your phone\’s camera and take a photo.</string>
    <string name="on_board_9">Nice! Tip: Long pressing images will give you several options. Try deleting that last image.</string>
    <string name="preference_file_key">"com.grahm.livepost.PREFERENCE_FILE_KEY"</string>
    <string name="add_session">Add Session</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_splash_screen">LivePost</string>
    <string name="title_activity_new_session">NewSession</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="num_followers_string">Followers</string>
    <string name="single_follower_string">Follower</string>
    <string name="no_results">Your search yielded no results</string>
    <string name="reg_email">E-mail</string>
    <string name="reg_password">Create a password</string>
    <string name="reg_fullname">What is your full name?</string>
    <string name="reg_avatar">Select an Image</string>
    <string name="reg_next_button">Next</string>
    <string name="reg_creating_text">Creating User</string>
    <string name="ns_story_name">Give your story a title</string>
    <string name="ns_category">Pick a category</string>
    <string name="ns_image">Add an image</string>
    <string name="ns_publish_in">Ready to publish your story?</string>
    <string name="ns_creating_text">Posting...</string>
    <string name="ns_story_name_error">Your story name must have at least 2 characters!</string>
    <string name="ns_story_no_img_error">You need an image to create a story</string>
    <string name="ns_publish_livepost">Publish on LivePost</string>
    <string name="ns_publish_site">Publish on your site</string>
    <string name="at_deleting">Deleting...</string>
    <string name="home_str">Livepost</string>
    <string name="chat_str">Favorites</string>
    <string name="favorites_str">Favorites</string>
    <string name="new_session_str">New Story</string>
    <string name="profile_str">Profile</string>
    <string name="user_reg_failed">User creation failed </string>
    <string name="lbl_description">What are you talking about?</string>
    <string name="txt_title">This is the title of your Session</string>
    <string name="lbl_category">What category does it fall into?</string>
    <string name="txt_category">This helps people find your Session</string>
    <string name="lbl_addImg">Add an image for your Session</string>
    <string name="lbl_warn">All fields are required to be completed</string>
    <string name="lbl_title">Notice:</string>
    <string name="lbl_err">An error occurred while uploading your image: Your image is too large or has an incompatible format</string>
    <string name="prompt_story_title">Academy Awards 2017, NFL Playoffs</string>
    <string name="my_posts">Created</string>
    <string name="contributed_posts">Contributed</string>
    <string name="story_invites">Notifications</string>
    <string-array name="array_categories">
        <item>News</item>
        <item>Entertainment</item>
        <item>Sports</item>
        <item>Technology &amp; Sciencee</item>
        <item>Business</item>
        <item>Events</item>
        <item>Lifestyle</item>
        <item>Interviews</item>
    </string-array>
    <string-array name="array_news">
        <item>Politics</item>
        <item>Opinion</item>
        <item>Breaking News</item>
        <item>Education</item>
        <item>Miscellaneous</item>
        <item>Crime</item>
        <item>Crisis</item>
        <item>Riots &amp; Protests</item>
        <item>World</item>
    </string-array>
    <string-array name="array_entertainments">
        <item>Arts &amp; Culture</item>
        <item>Books</item>
        <item>Fashion</item>
        <item>Funny</item>
        <item>Gaming</item>
        <item>Gambling</item>
        <item>Media</item>
        <item>Movies</item>
        <item>Music</item>
        <item>Wacky</item>
        <item>TV</item>
        <item>Celebrities</item>
    </string-array>
    <string-array name="array_sports">
        <item>Basketball</item>
        <item>Cricket</item>
        <item>Football</item>
        <item>Hockey</item>
        <item>Baseball</item>
        <item>Running</item>
        <item>Soccer</item>
    </string-array>
    <string-array name="array_technology">
        <item>Environment</item>
        <item>Technology</item>
        <item>Science</item>
    </string-array>
    <string-array name="array_business">
        <item>Money</item>
        <item>Economy</item>
        <item>Startups</item>
    </string-array>
    <string-array name="array_events">
        <item>Conferences</item>
        <item>Trade Shows</item>
        <item>Product Launches</item>
        <item>Weddings</item>
        <item>Music Festivals</item>
        <item>Marathons</item>
    </string-array>
    <string-array name="array_lifestyle">
        <item>Food</item>
        <item>Health</item>
        <item>Home</item>
        <item>Restaurants</item>
        <item>Hotels</item>
        <item>Religion</item>
        <item>Holidays</item>
        <item>Travel</item>
    </string-array>
    <string-array name="array_interviews">
        <item>Interviews</item>
        <item>Q&amp;A</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Enter you password again</string>
    <string name="register_check">Register New Account</string>
    <string name="action_sign_in">Login</string>
    <string name="action_twitter_login">Continue with Twitter</string>
    <string name="action_sign_up">Create new account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_taken_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_credentials">The username and password you entered do not match</string>
    <string name="error_service">Our authentication system is currently busy, try again later.</string>
    <string name="error_matching_password">The passwords entered do not match.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="success_registration">Account registered successfully!</string>
    <string name="success_login">Login successful!</string>
    <string name="title_activity_login_prompt">LoginPrompt</string>
    <string name="found_in">Found in </string>
    <string name="edit_title">Edit Post</string>
    <string name="edit_confirm">Done</string>
    <string name="edit_delete">Delete Post</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_change">Change</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_home_mode">Home Screen Presentation</string>
    <string name="pref_summary_home_mode">Select the presentation you want for the home page</string>
    <string name="pref_key_home_mode">homeMode</string>
    <string name="story_settings_code_title">Story code</string>
    <string name="story_settings_code_btn">Copy</string>
    <string name="story_settings_add_contributors">Add Contributors</string>
    <string name="story_settings_contributors_add_btn">Add</string>
    <string name="story_settings_contributors_delete_post_btn">Delete Story</string>
    <string name="pref_information">information</string>
    <string name="pref_content">Content Guidelines</string>
    <string name="pref_privacy">Privacy Policy</string>
    <string name="pref_terms">Terms and Conditions</string>
    <string name="pref_help">help</string>
    <string name="pref_account">account</string>
    <string name="pref_faq">faq</string>
    <string name="pref_change_password">Change Password</string>
    <string name="pref_log_out">Log Out</string>
    <string name="set_url_content">https://livepost.co/html/content_guidelines.html</string>
    <string name="set_url_privacy">https://livepost.co/html/privacy_policy.html</string>
    <string name="set_url_terms">https://livepost.co/html/terms_conditions.html</string>
    <string name="set_url_faq">https://livepost.freshdesk.com/support/home</string>
</resources>