<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets.  -->

    <header
        android:fragment="com.grahm.livepost.activities.SettingsActivity$GeneralPreferenceFragment"
        android:title="@string/pref_information" />
    <header
        android:fragment="com.grahm.livepost.activities.SettingsActivity$NotificationPreferenceFragment"
        android:title="@string/pref_help" />
    <header
        android:fragment="com.grahm.livepost.activities.SettingsActivity$NotificationPreferenceFragment"
        android:title="@string/pref_account" />
    <header
        android:fragment="com.grahm.livepost.activities.SettingsActivity$DataSyncPreferenceFragment"
        android:title="@string/pref_log_out" />

</preference-headers>
