<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/pref_information"
            android:textAllCaps="true"
            android:textColor="#444"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="#CACACA" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical">

            <Button
                android:onClick="openContent"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/pref_content"
                android:textAllCaps="false"
                android:padding="0dp"
                android:background="@android:color/transparent"
                android:tag="@string/set_url_content"
                android:textColor="#666"
                android:textStyle="normal"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="#CACACA" />

            <Button
                android:onClick="openContent"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:padding="0dp"
                android:background="@android:color/transparent"
                android:text="@string/pref_privacy"
                android:tag="@string/set_url_privacy"
                android:textColor="#666"
                android:textStyle="normal"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="#CACACA" />

            <Button
                android:onClick="openContent"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/pref_terms"
                android:textAllCaps="false"
                android:padding="0dp"
                android:background="@android:color/transparent"
                android:tag="@string/set_url_terms"
                android:textColor="#666"
                android:textStyle="normal"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="#CACACA" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/pref_help"
            android:padding="0dp"
            android:background="#fff"
            android:textAllCaps="true"
            android:textColor="#444"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="#CACACA" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical">

            <Button
                android:onClick="openContent"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/pref_faq"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:background="@android:color/transparent"
                android:tag="@string/set_url_faq"
                android:textColor="#666"
                android:textStyle="normal"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="#CACACA" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/pref_account"
            android:textAllCaps="true"
            android:textColor="#444"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="#CACACA" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_change_password"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/pref_change_password"
                android:textAllCaps="false"
                android:padding="0dp"
                android:background="@android:color/transparent"
                android:textStyle="normal"
                android:textColor="#666"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="#CACACA" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="#CACACA" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_log_out"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/pref_log_out"
                android:textAllCaps="false"
                android:padding="0dp"
                android:background="@android:color/transparent"
                android:textColor="@android:color/holo_red_light"
                android:textStyle="normal"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="#CACACA" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textColor="#888"
        android:textSize="14dp"
        android:textAlignment="center"/>

</LinearLayout>