<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/first_dark"
    tools:context="com.grahm.livepost.activities.SignUpPage">

    <ImageView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:alpha="0.6"
        android:scaleType="fitXY" />

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp">

        <ImageView
            android:id="@+id/img_banner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_widthPercent="75%"
            android:adjustViewBounds="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/banner_livepost" />

    </android.support.percent.PercentRelativeLayout>

    <TextView
        android:id="@+id/txt_signup_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_signup_header"
        android:textColor="#FFFFFF"
        android:textSize="28dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:paddingTop="220dp"/>

    <Button
        android:id="@+id/btn_login_twitter"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_twitter"
        android:text="@string/btn_login_twitter"
        android:textColor="#FFFFFF"
        android:textSize="22dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_border_color"
        android:layout_below="@id/txt_signup_header"
        android:layout_marginTop="70dp"
        android:textAllCaps="false"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_login_livepost"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_livepost"
        android:text="@string/btn_login_livepost"
        android:textColor="#FFFFFF"
        android:textSize="22dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/btn_border_color"
        android:layout_below="@id/btn_login_twitter"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:padding="10dp" />
</RelativeLayout>
