<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.grahm.livepost.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/first_dark"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/first_dark"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            </android.support.v7.widget.Toolbar>

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TabItem
                    android:id="@+id/m_tab_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="home"
                    android:text="@string/tab_name_home" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tab_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="new"
                    android:text="@string/tab_name_new" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tab_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="profile"
                    android:text="@string/tab_name_profile" />
            </android.support.design.widget.TabLayout>
        </android.support.design.widget.AppBarLayout>
        <com.objectlife.statelayout.StateLayout
            android:id="@+id/sl_layout_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <include
                android:id="@+id/v_empty"
                layout="@layout/view_empty_main"/>

            <include
                android:id="@+id/v_error"
                layout="@layout/view_error_main"/>

            <include
                android:id="@+id/v_loading"
                layout="@layout/view_loading_main"/>

        </com.objectlife.statelayout.StateLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
